UI Tests - Fix ComponentTest
Signed-off-by: Dominik Jelinek <djelinek@redhat.com>